force-app/main/default/objects/Account/fields/Combined_Credits_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Combined_Credits_This_Year__c</fullName>
    <formula>npo02__OppAmountThisYear__c +  Total_Soft_Credits_This_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Credits This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>