force-app/main/default/objects/Account/fields/Donor_Segment_Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Donor_Segment_Applied_Date__c</fullName>
    <label>Donor Segment Applied Date</label>
    <type>Date</type>
</CustomField>