force-app/main/default/objects/Account/fields/First_Combined_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Combined_Credit_Amount__c</fullName>
    <formula>IF(OR(ISBLANK( First_Soft_Credit_Date__c ),First_Soft_Credit_Date__c &lt;  npo02__FirstCloseDate__c ),  First_Gift_Amount__c , First_Soft_Credit_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Combined Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>