force-app/main/default/objects/Account/fields/First_Combined_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Combined_Credit_Date__c</fullName>
    <formula>IF(OR(ISBLANK(First_Soft_Credit_Date__c ),First_Soft_Credit_Date__c  &gt; npo02__FirstCloseDate__c),npo02__FirstCloseDate__c,First_Soft_Credit_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Combined Credit Date</label>
    <type>Date</type>
</CustomField>