force-app/main/default/objects/Account/fields/First_Recurring_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Recurring_Gift_Date__c</fullName>
    <label>First Recurring Gift Date</label>
    <type>Date</type>
</CustomField>