force-app/main/default/objects/Account/fields/First_Soft_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Soft_Credit_Amount__c</fullName>
    <label>First Soft Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>