force-app/main/default/objects/Account/fields/First_Soft_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Soft_Credit_Date__c</fullName>
    <label>First Soft Credit Date</label>
    <type>Date</type>
</CustomField>