force-app/main/default/objects/Account/fields/Last_Combined_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Combined_Credit_Amount__c</fullName>
    <formula>IF(OR( ISBLANK(Last_Soft_Credit_Date__c), Last_Soft_Credit_Date__c &lt;  npo02__LastCloseDate__c ),  npo02__LastOppAmount__c ,Last_Soft_Credit_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Combined Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>