force-app/main/default/objects/Account/fields/Last_Combined_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Combined_Credit_Date__c</fullName>
    <formula>IF(OR(ISBLANK(Last_Soft_Credit_Date__c), Last_Soft_Credit_Date__c &lt; npo02__LastCloseDate__c), npo02__LastCloseDate__c,Last_Soft_Credit_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Combined Credit Date</label>
    <type>Date</type>
</CustomField>