force-app/main/default/objects/Account/fields/Last_Soft_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Soft_Credit_Amount__c</fullName>
    <label>Last Soft Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>