force-app/main/default/objects/Account/fields/Last_Soft_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Soft_Credit_Date__c</fullName>
    <label>Last Soft Credit Date</label>
    <type>Date</type>
</CustomField>