force-app/main/default/objects/Account/fields/Major_Donor_Downgrade_By__c.field-meta.xml
<CustomField>
    <fullName>Major_Donor_Downgrade_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Major Donor Downgrade By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MajorDonorDowngrades</relationshipName>
    <type>Lookup</type>
</CustomField>