force-app/main/default/objects/Account/fields/Major_Donor_Downgrade_Date__c.field-meta.xml
<CustomField>
    <fullName>Major_Donor_Downgrade_Date__c</fullName>
    <label>Major Donor Downgrade Date</label>
    <type>Date</type>
</CustomField>