force-app/main/default/objects/Account/fields/Mid_Level_Donor_Downgrade_By__c.field-meta.xml
<CustomField>
    <fullName>Mid_Level_Donor_Downgrade_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mid Level Donor Downgrade By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MidLevelDonorDowngrades</relationshipName>
    <type>Lookup</type>
</CustomField>