force-app/main/default/objects/Account/fields/Mid_Level_Donor_Status__c.field-meta.xml
<CustomField>
    <fullName>Mid_Level_Donor_Status__c</fullName>
    <label>Mid Level Donor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment_Status</valueSetName>
    </valueSet>
</CustomField>