force-app/main/default/objects/Account/fields/Mid_Level_Donor_Status_Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Mid_Level_Donor_Status_Applied_Date__c</fullName>
    <label>Mid Level Donor Status Applied Date</label>
    <type>Date</type>
</CustomField>