force-app/main/default/objects/Account/fields/Number_Combined_Credits_2_Years_Ago__c.field-meta.xml
<CustomField>
    <fullName>Number_Combined_Credits_2_Years_Ago__c</fullName>
    <formula>npo02__OppsClosed2YearsAgo__c +  Number_of_Soft_Credits_2_Years_Ago__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Combined Credits 2 Years Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>