force-app/main/default/objects/Account/fields/Number_Combined_Credits__c.field-meta.xml
<CustomField>
    <fullName>Number_Combined_Credits__c</fullName>
    <formula>Number_of_Soft_Credits__c +  npo02__NumberOfClosedOpps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Combined Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>