force-app/main/default/objects/Account/fields/Number_Combined_Credits_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_Combined_Credits_This_Year__c</fullName>
    <formula>npo02__OppsClosedThisYear__c +  Number_of_Soft_Credits_This_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Combined Credits This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>