force-app/main/default/objects/Account/fields/Number_Influenced_Gifts_2_FY_Ago__c.field-meta.xml
<CustomField>
    <fullName>Number_Influenced_Gifts_2_FY_Ago__c</fullName>
    <label>Number Influenced Gifts 2 FY Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>