force-app/main/default/objects/Account/fields/Number_Influenced_Gifts_This_FY__c.field-meta.xml
<CustomField>
    <fullName>Number_Influenced_Gifts_This_FY__c</fullName>
    <label>Number Influenced Gifts This FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>