force-app/main/default/objects/Account/fields/Number_of_Soft_Credits_2_Years_Ago__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Soft_Credits_2_Years_Ago__c</fullName>
    <label>Number of Soft Credits 2 Years Ago</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>