force-app/main/default/objects/Account/fields/Number_of_Soft_Credits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Soft_Credits__c</fullName>
    <label>Number of Soft Credits</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>