force-app/main/default/objects/Account/fields/Number_of_Soft_Credits_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Soft_Credits_This_Year__c</fullName>
    <label>Number of Soft Credits This Year</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>