force-app/main/default/objects/Account/fields/Status_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Status_Anniversary__c</fullName>
    <formula>OR(
 OR(
   AND(Mid_Level_Donor_Status_Applied_Date__c &gt;= ADDMONTHS(TODAY()-2,-15), Mid_Level_Donor_Status_Applied_Date__c &gt;= ADDMONTHS(TODAY(),-15)),
   AND(Mid_Level_Donor_Status_Applied_Date__c &gt;= ADDMONTHS(TODAY()-2,-36), Mid_Level_Donor_Status_Applied_Date__c &gt;= ADDMONTHS(TODAY(),-36))
   ),
 OR(
   AND(Donor_Status_Applied_Date__c &gt;= ADDMONTHS(TODAY()-2,-15), Donor_Status_Applied_Date__c &gt;= ADDMONTHS(TODAY(),-15)),
   AND(Donor_Status_Applied_Date__c &gt;= ADDMONTHS(TODAY()-2,-36), Donor_Status_Applied_Date__c &gt;= ADDMONTHS(TODAY(),-36))
   ),
 OR(
   AND(Major_Donor_Status_Applied_Date__c &gt;= ADDMONTHS(TODAY()-2,-15), Major_Donor_Status_Applied_Date__c &gt;= ADDMONTHS(TODAY(),-15)),
   AND(Major_Donor_Status_Applied_Date__c &gt;= ADDMONTHS(TODAY()-2,-36), Major_Donor_Status_Applied_Date__c &gt;= ADDMONTHS(TODAY(),-36))
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Anniversary</label>
    <type>Checkbox</type>
</CustomField>