force-app/main/default/objects/Account/fields/Sustainer_Status__c.field-meta.xml
<CustomField>
    <fullName>Sustainer_Status__c</fullName>
    <label>Sustainer Lifecycle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment_Status</valueSetName>
    </valueSet>
</CustomField>