force-app/main/default/objects/Account/fields/Total_Combined_Credits_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Combined_Credits_Last_12_Months__c</fullName>
    <formula>Total_HC_12_Months__c +  Total_Soft_Credit_12_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Combined Credits Last 12 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>