force-app/main/default/objects/Account/fields/Total_Combined_Credits_Last_24_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Combined_Credits_Last_24_Months__c</fullName>
    <description>Formula to used to calculate total HC &amp; SC gifts during past 24 months</description>
    <formula>Total_Hard_Credits_Past_24_Months__c  +  Total_Soft_Credit_Gifts_Past_24_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Combined Credits Last 24 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>