force-app/main/default/objects/Account/fields/Total_Hard_Credits_Past_24_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Hard_Credits_Past_24_Months__c</fullName>
    <description>Field used in rollup to calculate the total amount of hard credit gifts for the past 24 months</description>
    <label>Total Hard Credits Past 24 Months</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>