force-app/main/default/objects/Account/fields/Total_HC_60_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_HC_60_Months__c</fullName>
    <label>Total HC 60 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>