force-app/main/default/objects/Account/fields/Total_Influenced_Giving_2_FY_Ago__c.field-meta.xml
<CustomField>
    <fullName>Total_Influenced_Giving_2_FY_Ago__c</fullName>
    <description>Field used to capture Influenced Giving total over last two fiscal years. (used in soft credit rollup)</description>
    <label>Total Influenced Giving 2 FY Ago</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>