force-app/main/default/objects/Account/fields/Total_Influenced_Giving__c.field-meta.xml
<CustomField>
    <fullName>Total_Influenced_Giving__c</fullName>
    <label>Total Influenced Giving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>