force-app/main/default/objects/Account/fields/Total_Influenced_Giving_Last_FY__c.field-meta.xml
<CustomField>
    <fullName>Total_Influenced_Giving_Last_FY__c</fullName>
    <description>Field used to capture total Influenced Giving for the last fiscal year (used for soft credit rollup)</description>
    <label>Total Influenced Giving Last FY</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>