force-app/main/default/objects/Account/fields/Total_Soft_Credit_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Soft_Credit_12_Months__c</fullName>
    <label>Total Soft Credit 12 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>