force-app/main/default/objects/Account/fields/Total_Soft_Credits_2_Years_Ago__c.field-meta.xml
<CustomField>
    <fullName>Total_Soft_Credits_2_Years_Ago__c</fullName>
    <label>Total Soft Credits 2 Years Ago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>