force-app/main/default/objects/Account/fields/Total_Soft_Credits_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Soft_Credits_This_Year__c</fullName>
    <label>Total Soft Credits This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>